--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "hammerjs": "2.0.8",
     "jquery": "3.6.0",
     "moment": "2.29.1",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^5.1.1",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
     "rxjs": "^7.5.5",
