--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@angular/platform-browser-dynamic": "^13.3.1",
     "@angular/platform-server": "13.3.1",
     "@angular/router": "^13.3.1",
+    "@bepo65/leaflet.fullscreen": "^2.0.2",
+    "@types/leaflet": "^1.7.10",
     "ajv": "8.11.0",
     "arrive": "2.4.1",
     "bootstrap": "^4.6.1",
@@ -43,6 +45,7 @@
     "hammerjs": "2.0.8",
     "igniteui-angular": "^13.1.10",
     "jquery": "3.6.0",
+    "leaflet": "^1.8.0",
     "moment": "^2.29.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.1.1",
