--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "core-js": "3.21.1",
     "eslint": "^8.11.0",
     "express": "4.17.3",
+    "file-saver": "^2.0.5",
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
     "igniteui-angular": "^13.1.10",
@@ -54,6 +55,7 @@
     "rxjs": "^7.5.5",
     "rxjs-compat": "6.6.7",
     "web-animations-js": "2.3.2",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
