--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@angular/platform-browser-dynamic": "^13.3.1",
     "@angular/platform-server": "13.3.1",
     "@angular/router": "^13.3.1",
+    "@asymmetrik/ngx-leaflet": "^13.0.2",
     "@bepo65/leaflet.fullscreen": "^2.0.2",
+    "@runette/ngx-leaflet-sidebar": "^1.0.7",
+    "@types/geojson": "^7946.0.8",
     "@types/leaflet": "^1.7.10",
     "ajv": "8.11.0",
     "arrive": "2.4.1",
@@ -47,6 +50,8 @@
     "igniteui-angular": "^13.1.10",
     "jquery": "3.6.0",
     "leaflet": "^1.8.0",
+    "leaflet-routing-machine": "^3.2.12",
+    "leaflet-sidebar-v2": "^3.2.3",
     "moment": "^2.29.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.1.1",
@@ -54,6 +59,7 @@
     "popper.js": "1.16.1",
     "rxjs": "^7.5.5",
     "rxjs-compat": "6.6.7",
+    "tslib": "^2.4.0",
     "web-animations-js": "2.3.2",
     "xlsx": "^0.18.5",
     "zone.js": "~0.11.5"
@@ -69,7 +75,8 @@
     "@types/jasmine": "~3.10.3",
     "@types/jasminewd2": "~2.0.10",
     "@types/jquery": "3.5.6",
-    "@types/node": "16.3.2",
+    "@types/leaflet-routing-machine": "^3.2.3",
+    "@types/node": "^16.11.36",
     "codelyzer": "6.0.2",
     "jasmine-core": "~4.0.1",
     "jasmine-spec-reporter": "~7.0.0",
