--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -17,5 +17,7 @@
   "include": [
     "**/*.spec.ts",
     "**/*.d.ts"
-  ]
+  ],
+  "types": [ "node" ],
+  "typeRoots": [ "../node_modules/@types" ]
 }
