--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "@angular/cli": "^13.3.1",
     "@angular/compiler-cli": "^13.3.1",
     "@angular/language-service": "13.3.1",
-    "@types/bootstrap": "4.5.0",
+    "@types/bootstrap": "^4.5.0",
     "@types/chartist": "0.11.1",
     "@types/google.maps": "3.47.4",
     "@types/jasmine": "~3.10.3",
